--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Mike",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/polyline": "^1.0.0",
     "axios": "^0.18.0",
     "express": "^4.16.4"
   }
